         development time.
  - CHG: add separator to simuOpt's parameter specification.
  - NEW: add controlledRandomMating and controlledBinomialSelection which
         implement a quicker alternative to controlledMating. 
  - CHG: simuComplexDisease.py has been re-written.
  - NEW: add TurnOnDebugWithName(name) and the ability to set SIMUDEBUG
         to turn on certain debug mode.
         

version 0.6.12 - (Rev 186) - Feb 18, 2006 
  - CHG: 'not enough case/control' in caseControlSample now generates 
         a warning message, rather than exception.
  - CHG: set the default sample saveAs format to 'auto', instead of 'bin'
         'bin' was used before 'auto' was introduced
  - NEW: the format parameter of loadPopulation, loadSimulator are obsolete.
         File type will be automatically determined.
  - NEW: the wrap files will be automatically generated if any of the source
         files is modified. This is useful mostly for svn users.
  - NEW: simuUtil/SaveLinkage is improved in efficiency
  - CHG: simuUtil/SaveLinkage: if pre is True, the output is filename.pre
         instead of filename.ped, which will be used when pre is False.
  - CHG: (internal cleaning) fitness is implemented differently.
  - CHG: (internal cleaning) randomMating sex determination no longer use bt. 
  - CHG: (internal cleaning) isMale class is replaced by a less fancier solution.
  - CHG: (internal) change the use of pointer to iterator, in preparation for
         compact presentation of binary alleles.
  - NEW: add a compilable (imcomplete) binary library. All alleles are 0 or 1
         and are stored internally as bits to save spaces.
  - CHG: carray can now read/write binary allele. However, it can no longer 
         be a standalone type. It should always be only a reference to a 
         piece of memory. This simplifies the design since we do not have to
         worry about extending, slicing etc.